<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_listagem">Listagem</string>
    <string name="title_activity_listagem">Listagem</string>
    <string name="sync_service">com.domingoscarreiradepaola.crossover.conference</string>
    <string name="app_name">MedicalConferences</string>
    <string name="action_init">Default</string>
    <string name="action_list">Conferences List</string>
    <string name="nome_usuario">User Name</string>
    <string name="login">Ok</string>
    <string name="password_field">password</string>
    <string name="sync_users">Sync users from web</string>
    <string name="teste">Teste</string>
    <string name="disabled_user_message">user disabled</string>
    <string name="disableduser">disableduser</string>
    <string name="first_sync">firstsync</string>
    <string name="user">User</string>
    <string name="user_id">userId</string>
    <string name="conference_id_selected">conferenceidselected</string>
    <string name="suggestion_id_selected">suggestionidselected</string>
    <string name="get_gcm_id">getgcmid</string>
    <string name="loading_users">Loading users...</string>
    <string name="ok">Ok</string>
    <string name="save_now">Save now</string>
    <string name="acept">Acept</string>
    <string name="reject">Reject</string>
    <string name="invite_now">Invite doctor</string>
    <string name="save_after">Save after</string>
    <string name="title_dialog_erro">Error !!</string>
    <string name="conection_offline">Conection off line</string>
    <string name="loading">Loading...</string>
    <string name="invalid_user">Username or password invalid.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">password</string>
    <string name="shared_preferences_id">medicalconferencecrossover</string>
    <string name="count_sync">countsync</string>
    <string name="is_syncinc">issyncinc</string>
    <string name="sender_id">711593015948</string>
    <string name="no_package">Could not get package name: </string>
    <string name="registration_id">idgcm</string>
    <string name="version_id">versionid</string>
    <string name="get_user">getuser</string>
    <string name="get_profile">getprofile</string>
    <string name="token">DomingosCarreiraDePaolaCrossOver12</string>
    <string name="key">Key</string>
    <string name="action_settings">Settings</string>
    <string name="sugestions">Conference Suggestions</string>
    <string name="logout">Logout</string>
    <string name="invite_doctor">Invite Doctor</string>
    <string name="no_conferences_find">No conferences find</string>
    <string name="title_activity_conference">Conference</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_input">Invalid Inputs</string>
    <string name="blank_fields">Fill all the blank fields</string>
    <string name="saved_sucess">Saved successfully</string>
    <string name="invite_acept">Invitation accepted</string>
    <string name="invite_reject">Invitation rejected</string>
    <string name="suggestion_add_toast">Enter the suggestion on the field and click Save</string>
    <string name="invitation_send">Invitation send</string>
    <string name="syncronized">Syncronized</string>
    <string name="datepicker">datepicker</string>
    <string name="title_activity_list_confere">List of Conferences</string>
    <string name="inform_list_text">Welcome. Click on the list item to alter a conference. Click + button to add a new one or select an menu item.</string>
    <string name="inform_list_doctor_text">Welcome. Click on the list item to open a conference or select an menu item.</string>
    <string name="default_error_msg">Ops ! Something wrong. Try again.</string>
    <string name="invite_exists">You already invited this doctor to this conference.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_invite">Invite</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_suggestions">Suggestions</string>
</resources>
