<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.domingoscarreiradepaola.crossover.conference.UserInterface.InviteActivity">
    <item android:id="@+id/saveInvite"
        android:orderInCategory="100"
        android:title="@string/invite_now" android:icon="@drawable/ic_cab_done_mtrl_alpha"
        app:showAsAction="always|withText"

        ></item>
    <item android:id="@+id/menuList"
        android:orderInCategory="100"
        android:title="@string/action_list"
        app:showAsAction="never"

        ></item>
    <item android:id="@+id/menu_logout" android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
